--- a/package.json
+++ b/package.json
@@ -28,13 +28,12 @@
     "pg": "^7.9.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "5.1.1",
-    "sequelize-typescript": "^0.6.8"
+    "sequelize-typescript": "^1.0.0-alpha.9"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.26",
     "@types/express": "^4.16.1",
     "@types/node": "^11.11.6",
-    "@types/sequelize": "^4.27.44",
     "@types/validator": "^10.9.0",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
